# JOSIE-Bot

./: .gitmodules  BUILD_WINDOWS.bat  JOSIE v1.1.spec  JOSIE.spec  LICENSE.md  README.md  android_memory_fix.patch  backend_init_fix.patch  build-linux.yml  build_mac.sh  codemagic.yaml  josie.icns  josie.py  project.yml  requirements.txt  version.txt
.github/workflows/: build-android.yml  build-windows.yml
JOSIE.xcodeproj/: project.pbxproj
JOSIE.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
JOSIE.xcodeproj/project.xcworkspace/xcuserdata/pekoxusagikiwi.xcuserdatad/: UserInterfaceState.xcuserstate
JOSIE.xcodeproj/xcuserdata/pekoxusagikiwi.xcuserdatad/xcschemes/: xcschememanagement.plist
JOSIEApp/: ChatBubble.swift  ContentView.swift  Extensions.swift  JOSIEApp.swift  JosieBrain.swift  JosieVoiceManager.swift  ModelPickerView.swift
JOSIEApp-Android/: .gitignore  gradle.properties  settings.gradle.kts
JOSIEApp-Android/app/: build.gradle.kts  proguard-rules.pro
JOSIEApp-Android/app/src/main/: AndroidManifest.xml
JOSIEApp-Android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
JOSIEApp-Android/app/src/main/cpp/llama.cpp/.git 2/: config  index  packed-refs
JOSIEApp-Android/app/src/main/cpp/llama.cpp/.git 2/logs/refs/remotes/origin/: HEAD
JOSIEApp-Android/app/src/main/cpp/llama.cpp/.git 2/objects/pack/: pack-394c54dc4d14c025d86b6202f70d2886f971d2af.idx
JOSIEApp-Android/app/src/main/cpp/llama.cpp/ggml/: CMakeLists.txt
JOSIEApp-Android/app/src/main/cpp/llama.cpp/ggml 2/src/ggml-vulkan/: ggml-vulkan.cpp
JOSIEApp-Android/app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: CMakeLists.txt
JOSIEApp-Android/app/src/main/java/com/josie/ai/: ChatScreen.kt  JosieBrain.kt  JosieSTTManager.kt  JosieVoiceManager.kt  LlamaNative.kt  MainActivity.kt  ModelManager.kt  Models.kt
JOSIEApp-Android/app/src/main/res/drawable/: ic_launcher_foreground.xml
JOSIEApp-Android/app/src/main/res/values/: themes.xml  values.xml
JOSIEApp-Android/app/src/main/res/xml/: data_extraction_rules.xml
JOSIEApp-Android/app/src/main/xml/: backup_rules.xml  data_extraction_rules.xml
JOSIEApp-Android/gradle/: libs.versions.toml
JOSIEApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
JOSIEApp/Assets.xcassets/josie_avatar.imageset/: Contents.json
